# minesweeper

./: CMakeLists.txt  README.md
.github/workflows/: test.yaml
cucumber-acceptance-tests/: pom.xml
cucumber-acceptance-tests/src/main/java/minesweeper/: GameMode.java  GameModeSelector.java  HelpPage.java
cucumber-acceptance-tests/src/test/java/minesweeper/runner/: CucumberRunnerTest.java
cucumber-acceptance-tests/src/test/java/minesweeper/stepdefinitions/: BoardSizeSteps.java  HelpPageSteps.java
cucumber-acceptance-tests/src/test/resources/features/: help_page.feature
src/: field.cpp
tests/: CMakeLists.txt  test_common.cpp  test_common_seconds_to_time_struct.cpp  test_field_create_2D_Vector.cpp  test_field_fill_mines.cpp  test_field_game_lost.cpp  test_field_is_flag.cpp  test_field_is_number.cpp  test_helpers.h  test_input_get_difficulty.cpp
tests/graph_based_tests/: test_common_coords_to_cursor_position.cpp  test_common_coords_to_int.cpp  test_field_create_2D_Vector.cpp  test_field_game_lost.cpp  test_input_move_cursor.cpp
tests/input_domain_modeling_tests/: test_common_int_to_coords.cpp  test_field_fill_mines.cpp  test_field_find_neighbors.cpp  test_field_is_number.cpp
